@@ -14,6 +14,7 @@ Verilator 5.007 devel
 **Minor:**
 
 * Support unpacked unions.
+* Support global clocking and $global_clock.
 
 
 Verilator 5.006 2022-01-22
